--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -1,67 +1,84 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:dt="http://www.thymeleaf.org/datatables4jdialect">
-<head th:include="layout/mainLayout :: headerFragment"></head>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+   xmlns:dt="http://www.thymeleaf.org/datatables4jdialect" layout:decorator="common/layout/mainLayout">
+
 <body>
-   <div th:include="layout/mainLayout :: navbarFragment"></div>
-
-   <div class="container">
-      <div class="row">
+   <div layout:fragment="content">
+      <div class="row-fluid">
          <div class="span12">
+            <a href="http://datatables.net/"> <img th:src="@{/img/logo_DataTables4j.png}"
+               style="float: left; margin-right: 20px;" />
+            </a>
+            <h2>Live DataTables4j JSP demo</h2>
+            <h4>Welcome !</h4>
+            <hr />
+         </div>
+      </div>
 
-            <div class="row">
-               <div class="span12">
-                  <a href="http://thymeleaf.org/"> <img th:src="@{/images/logo_thymeleaf_sans_nom.png}" style="float: left; margin-right: 30px;" width="80px"
-                     height="80px"
-                  />
-                  </a>
-                  <h3>Live DataTables4j Thymeleaf demo</h3>
-                  <h4>Welcome !</h4>
-                  <hr />
-               </div>
-            </div>
+      <div class="row-fluid marketing">
+         <div class="span5 offset1">
+            <h3>
+               <i class="icon-leaf"></i> Basic examples
+            </h3>
+            <p>All basic examples : sorting, filtering, paging, how to use implicit objects, CDN option and others !</p>
+            <p>
+               <a class="btn" th:href="@{/basic/home}">View details »</a>
+            </p>
+         </div>
+         <div class="span5">
+            <h3>
+               <i class="icon-legal"></i> Advanced examples
+            </h3>
+            <p>See how to override the default configuration, how to use DataTables plugins, how to internationalize
+               the table and others !</p>
+            <p>
+               <a class="btn" th:href="@{/advanced/home}">View details »</a>
+            </p>
+         </div>
+      </div>
 
-            <div class="row">
-               <div class="span12">
-                  <p>
-                     The source of the demo are available here : <a href="https://github.com/datatables4j/datatables4j-demo-thymeleaf">https://github.com/datatables4j/datatables4j-demo-thymeleaf</a>
-                  </p>
-               </div>
-            </div>
+      <div class="row-fluid">
+         <div class="span5 offset1">
+            <h3>
+               <i class="icon-list"></i> Features
+            </h3>
+            <p>Export in PDF, CSV, XLS and others formats or how to enable web resources aggregation and compression
+               !</p>
+            <p>
+               <a class="btn" th:href="@{/features/home}">View details »</a>
+            </p>
+         </div>
+         <div class="span5">
+            <h3>
+               <i class="icon-magic"></i> Themes
+            </h3>
+            <p>See how to easily prettify your tables using embedded themes and others cool stuff !</p>
+            <p>
+               <a class="btn" th:href="@{/themes/home}">View details »</a>
+            </p>
+         </div>
+      </div>
 
-            <!-- 
-            <div class="row">
-               <div class="span12">
-               <h2>Features</h2></div>
-            </div>
-            
-            <div class="row">
-               <div class="span4">
-                  <h3>Compression</h3>
-                  <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-                     fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-                  <p>
-                     <a class="btn" href="#">View details »</a>
-                  </p>
-               </div>
-               <div class="span4">
-                  <h3>Aggregation</h3>
-                  <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-                     fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
-                  <p>
-                     <a class="btn" href="#">View details »</a>
-                  </p>
-               </div>
-               <div class="span4">
-                  <h3>Export</h3>
-                  <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod
-                     semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-                  <p>
-                     <a class="btn" href="#">View details »</a>
-                  </p>
-               </div>
-            </div>
-             -->
-             
+      <div class="row-fluid">
+         <div class="span8 offset4">
+            <h3>
+               <i class="icon-plus"></i> Plugins
+            </h3>
+            <p>TODO</p>
+            <p>
+               <a class="btn" th:href="@{/plugins/home}">View details »</a>
+            </p>
+         </div>
+      </div>
+
+      <div class="row-fluid">
+         <div class="span12">
+            <p>
+               <br /> <i class="icon-info-sign icon-large"></i> You are advised to use browser development tools like <a
+                  href="http://getfirebug.com/">Firebug</a> or <a
+                  href="http://developer.chrome.com/extensions/tut_debugging.html">built-in ones</a> to see the web
+               resources generated by <strong>Datatables4j</strong>.
+            </p>
          </div>
       </div>
    </div>
