--- a/src/main/webapp/WEB-INF/views/themes/bootstrap2.html
+++ b/src/main/webapp/WEB-INF/views/themes/bootstrap2.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-   xmlns:dt="http://www.thymeleaf.org/datatables4jdialect" layout:decorator="common/layout/basicLayout">
+   xmlns:dt="http://www.thymeleaf.org/datatables4jdialect" layout:decorator="common/layout/themeLayout">
 
-<head>
-<title>Default configuration</title>
+<head layout:fragment="header">
+<title>Bootstrap 2 Theme</title>
+<link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css" rel="stylesheet" />
+<link th:href="@{/css/custom.css}" rel="stylesheet" />
+
+<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.8.3.min.js"></script>
+<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
+<script src="http://ajax.aspnetcdn.com/ajax/jquery.dataTables/1.9.4/jquery.dataTables.min.js"></script>
+<script th:src="@{/js/github-files.js}"></script>
 </head>
 
 <body>
@@ -12,10 +19,14 @@
 
       <div class="row-fluid">
          <div class="span12">
-            <h3>Default configuration</h3>
-            <p>Using the default configuration, basic features are allways activated : filtering, paging, sorting,
-               ...</p>
-            <br />
+            <h3>Bootstrap 2 theme</h3>
+      In order to activate the Bootstrap 2 theme, just :
+      <ul>
+         <li>set the <tt>theme</tt> table attribute to <tt>bootstrap2</tt></li>
+         <li>add the table Bootstrap CSS classes using <tt>cssClass</tt> table attribute depending on your needs
+         </li>
+      </ul>
+      <br />
          </div>
       </div>
 
@@ -29,7 +40,7 @@
             <div class="tab-content">
                <div class="tab-pane active" id="tabDemo">
 
-                  <table id="myTable" dt:table="true">
+                  <table id="myTable" dt:table="true" dt:theme="bootstrap2" class="table table-striped table-bordered table-condensed">
                      <thead>
                         <tr>
                            <th>Id</th>
