--- a/src/main/webapp/WEB-INF/views/common/layout/themeLayout.html
+++ b/src/main/webapp/WEB-INF/views/common/layout/themeLayout.html
@@ -9,7 +9,7 @@
       <div class="span2 bs-docs-sidebar">
          <ul class="nav nav-list bs-docs-sidenav affix">
             <li><a th:href="@{/themes/bootstrap2}"><i class="icon-chevron-right"></i> Bootstrap 2 theme</a></li>
-            <li><a th:href="@{/themes/jQueryUI}"><i class="icon-chevron-right"></i> jQueryUI theme</a></li>
+            <li><a th:href="@{/themes/jqueryui}"><i class="icon-chevron-right"></i> jQueryUI theme</a></li>
          </ul>
       </div>
 
