--- a/src/main/webapp/WEB-INF/views/plugins/fixedheader.html
+++ b/src/main/webapp/WEB-INF/views/plugins/fixedheader.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
    xmlns:dt="http://www.thymeleaf.org/datatables4jdialect" layout:decorator="common/layout/basicLayout">
 
 <head>
-<title>Default configuration</title>
+<title>ColReorder plugin</title>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 
       <div class="row-fluid">
          <div class="span12">
-            <h3>Default configuration</h3>
+            <h3>ColReorder</h3>
             <br />
          </div>
       </div>
@@ -21,7 +21,7 @@
          <div class="span12">
 
             <table id="myTable" dt:table="true">
-               <thead>
+               <thead dt:fixedheader="true">
                   <tr>
                      <th>Id</th>
                      <th>Firstname</th>
@@ -30,17 +30,19 @@
                      <th>Mail</th>
                   </tr>
                </thead>
-               <tbody th:remove="all-but-first">
+               <tbody>
                   <tr th:each="person : ${persons}">
                      <td th:text="${person.id}">1</td>
                      <td th:text="${person.firstName}">John</td>
                      <td th:text="${person.lastName}">Doe</td>
                      <td th:text="${person.address.street1}">Nobody knows !</td>
-                     <td th:text="${person.mail}">john@doe.com</td>
+                     <td><a th:href="${'mailto:' + person.mail}" th:text="${person.mail}">john@doe.com</a></td>
                   </tr>
                </tbody>
             </table>
          </div>
+         
+         <div style="height: 800px;">&nbsp;</div>
       </div>
    </div>
 </body>
