--- a/src/main/webapp/WEB-INF/views/basic/customcontent.html
+++ b/src/main/webapp/WEB-INF/views/basic/customcontent.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
    xmlns:dt="http://www.thymeleaf.org/datatables4jdialect" layout:decorator="common/layout/basicLayout">
 
 <head>
-<title>Default configuration</title>
+<title>Column custom content</title>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 
       <div class="row-fluid">
          <div class="span12">
-            <h3>Default configuration</h3>
+            <h3>Column custom content</h3>
             <br />
          </div>
       </div>
@@ -28,6 +28,7 @@
                      <th>Lastname</th>
                      <th>Street</th>
                      <th>Mail</th>
+                     <th>Actions</th>
                   </tr>
                </thead>
                <tbody th:remove="all-but-first">
@@ -37,6 +38,10 @@
                      <td th:text="${person.lastName}">Doe</td>
                      <td th:text="${person.address.street1}">Nobody knows !</td>
                      <td th:text="${person.mail}">john@doe.com</td>
+                     <td>
+                        <a th:onclick="'alert(\'Person ' + ${person.id} + ' deleted !\');'" class="btn btn-mini" title="Remove"><i class="icon-trash"></i></a>
+                        <a th:onclick="'alert(\'Person ' + ${person.id} + ' edited !\');'" class="btn btn-mini" title="Edit"><i class="icon-edit"></i></a>
+                     </td>
                   </tr>
                </tbody>
             </table>
