--- a/src/main/webapp/WEB-INF/views/basic/implicitObject.html
+++ b/src/main/webapp/WEB-INF/views/basic/implicitObject.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
    xmlns:dt="http://www.thymeleaf.org/datatables4jdialect" layout:decorator="common/layout/basicLayout">
 
@@ -12,7 +12,7 @@
 
       <div class="row-fluid">
          <div class="span12">
-            <h3>Default configuration</h3>
+            <h3>Using implicit object</h3>
             <br />
          </div>
       </div>
@@ -36,7 +36,7 @@
                      <td th:text="${person.firstName}">John</td>
                      <td th:text="${person.lastName}">Doe</td>
                      <td th:text="${person.address.street1}">Nobody knows !</td>
-                     <td th:text="${person.mail}">john@doe.com</td>
+                     <td><a th:href="${'mailto:' + person.mail}" th:text="${person.mail}">john@doe.com</a></td>
                   </tr>
                </tbody>
             </table>
