Demo cleaned according to supported features

--- a/src/main/webapp/WEB-INF/views/advanced/home.html
+++ b/src/main/webapp/WEB-INF/views/advanced/home.html
@@ -13,7 +13,7 @@
       <div class="row-fluid">
          <div class="span12">
             <h3>
-               <i class="icon-fire"></i> Advanced examples
+               <i class="icon-certificate"></i> Advanced examples
             </h3>
             <hr />
          </div>
