--- a/src/main/webapp/WEB-INF/views/basic/info.html
+++ b/src/main/webapp/WEB-INF/views/basic/info.html
@@ -35,7 +35,7 @@
             <div class="tab-content">
                <div class="tab-pane active" id="tabDemo">
 
-                  <table id="myTable" dt:table="true" dt:info="false">
+                  <table id="myTableId" dt:table="true" dt:info="false">
                      <thead>
                         <tr>
                            <th>Id</th>
