--- a/src/main/webapp/WEB-INF/views/features/home.html
+++ b/src/main/webapp/WEB-INF/views/features/home.html
@@ -13,7 +13,7 @@
       <div class="row-fluid">
          <div class="span12">
             <h3>
-               <i class="icon-list"></i> Features
+               <i class="icon-th-large"></i> Features
             </h3>
             <hr />
          </div>
