--- a/src/main/webapp/WEB-INF/views/plugins/home.html
+++ b/src/main/webapp/WEB-INF/views/plugins/home.html
@@ -13,7 +13,7 @@
       <div class="row-fluid">
          <div class="span12">
             <h3>
-               <i class="icon-plus"></i> Plugins fucking test
+               <i class="icon-plus"></i> Plugins
             </h3>
             <hr />
          </div>
