--- a/src/main/webapp/WEB-INF/views/basic/autowidth.html
+++ b/src/main/webapp/WEB-INF/views/basic/autowidth.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:dt="http://www.thymeleaf.org/datatables4jdialect">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:dt="http://github.com/datatables4j/thymeleaf">
 <head th:include="layout/mainLayout :: headerFragment"></head>
 <body>
    <div th:include="layout/mainLayout :: navbarFragment"></div>
 
-   <div class="container">
+   <div class="container" dt>
 
       <div class="row">
          <div class="span12">
