--- a/src/main/webapp/WEB-INF/views/common/layout/mainLayout.html
+++ b/src/main/webapp/WEB-INF/views/common/layout/mainLayout.html
@@ -37,8 +37,8 @@
                <div class="nav-collapse collapse">
                   <ul class="nav">
                      <li><a th:href="@{/basic/home}"><i class="icon-leaf"></i> Basic examples</a></li>
-                     <li><a th:href="@{/advanced/home}"><i class="icon-fire"></i> Advanced examples</a></li>
-                     <li><a th:href="@{/features/home}"><i class="icon-list"></i> Features</a></li>
+                     <li><a th:href="@{/advanced/home}"><i class="icon-certificate"></i> Advanced examples</a></li>
+                     <li><a th:href="@{/features/home}"><i class="icon-th-large"></i> Features</a></li>
                      <li><a th:href="@{/themes/home}"><i class="icon-magic"></i> Themes</a></li>
                      <li><a th:href="@{/plugins/home}"><i class="icon-plus"></i> Plugins</a></li>
                   </ul>
