--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -5,12 +5,11 @@
 <body>
    <div layout:fragment="content">
       <div class="row-fluid">
-         <div class="span12">
+         <div class="span7 offset3">
             <a href="http://datatables.net/"> <img th:src="@{/img/logo_DataTables4j.png}"
                style="float: left; margin-right: 20px;" />
             </a>
-            <h2>Live DataTables4j JSP demo</h2>
-            <h4>Welcome !</h4>
+            <h2>Live DataTables4j Thymeleaf demo</h2>
             <hr />
          </div>
       </div>
@@ -27,7 +26,7 @@
          </div>
          <div class="span5">
             <h3>
-               <i class="icon-legal"></i> Advanced examples
+               <i class="icon-certificate"></i> Advanced examples
             </h3>
             <p>See how to override the default configuration, how to use DataTables plugins, how to internationalize
                the table and others !</p>
@@ -40,7 +39,7 @@
       <div class="row-fluid">
          <div class="span5 offset1">
             <h3>
-               <i class="icon-list"></i> Features
+               <i class="icon-th-large"></i> Features
             </h3>
             <p>Export in PDF, CSV, XLS and others formats or how to enable web resources aggregation and compression
                !</p>
@@ -60,19 +59,19 @@
       </div>
 
       <div class="row-fluid">
-         <div class="span8 offset4">
+         <div class="span5 offset1">
             <h3>
                <i class="icon-plus"></i> Plugins
             </h3>
-            <p>TODO</p>
+            <p>Need to use a DataTables plugin ? See how easy it is !</p>
             <p>
-               <a class="btn" th:href="@{/plugins/home}">View details »</a>
+               <a class="btn" href="@{/plugins/home}">View details »</a>
             </p>
          </div>
       </div>
 
       <div class="row-fluid">
-         <div class="span12">
+         <div class="span7 offset3">
             <p>
                <br /> <i class="icon-info-sign icon-large"></i> You are advised to use browser development tools like <a
                   href="http://getfirebug.com/">Firebug</a> or <a
