--- a/src/main/webapp/WEB-INF/views/plugins/fixedheader.html
+++ b/src/main/webapp/WEB-INF/views/plugins/fixedheader.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-   xmlns:dt="http://www.thymeleaf.org/datatables4jdialect" layout:decorator="common/layout/basicLayout">
+   xmlns:dt="http://www.thymeleaf.org/datatables4jdialect" layout:decorator="common/layout/pluginLayout">
 
 <head>
-<title>ColReorder plugin</title>
+<title>FixedHeader plugin</title>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 
       <div class="row-fluid">
          <div class="span12">
-            <h3>ColReorder</h3>
+            <h3>FixedHeader</h3>
             <br />
          </div>
       </div>
