--- a/src/main/webapp/WEB-INF/views/themes/bootstrap2.html
+++ b/src/main/webapp/WEB-INF/views/themes/bootstrap2.html
@@ -23,76 +23,42 @@
       <div class="row-fluid">
          <div class="span12">
             <h3>Bootstrap 2 theme</h3>
-      In order to activate the Bootstrap 2 theme, just :
-      <ul>
-         <li>set the <code>dt:theme</code> table attribute to <tt>bootstrap2</tt></li>
-         <li>add the table Bootstrap CSS classes using <tt>cssClass</tt> table attribute depending on your needs
-         </li>
-      </ul>
-      <br />
+            In order to activate the Bootstrap 2 theme, just :
+            <ul>
+               <li>set the <code>dt:theme</code> table attribute to <tt>bootstrap2</tt></li>
+               <li>add the table Bootstrap CSS classes using <tt>cssClass</tt> table attribute depending on your
+                  needs
+               </li>
+            </ul>
+            <br />
          </div>
       </div>
 
       <div class="row-fluid">
          <div class="span12">
-            <ul class="nav nav-tabs">
-               <li class="active"><a href="#tabDemo" data-toggle="tab">Demo</a></li>
-               <li><a href="#tabCode" data-toggle="tab">Code</a></li>
-            </ul>
-
-            <div class="tab-content">
-               <div class="tab-pane active" id="tabDemo">
-
-                  <table id="myTable" dt:table="true" dt:theme="bootstrap2" class="table table-striped table-bordered table-condensed">
-                     <thead>
-                        <tr>
-                           <th>Id</th>
-                           <th>Firstname</th>
-                           <th>Lastname</th>
-                           <th>Street</th>
-                           <th>Mail</th>
-                        </tr>
-                     </thead>
-                     <tbody>
-                        <tr th:each="person : ${persons}">
-                           <td th:text="${person.id}">1</td>
-                           <td th:text="${person.firstName}">John</td>
-                           <td th:text="${person.lastName}">Doe</td>
-                           <td th:text="${person.address.street1}">Nobody knows !</td>
-                           <td th:text="${person.mail}">john@doe.com</td>
-                        </tr>
-                     </tbody>
-                  </table>
-
-               </div>
-               <div class="tab-pane" id="tabCode">
-                  <pre id="code" class="prettyprint linenums"></pre>
-               </div>
-            </div>
+            <table id="myTable" dt:table="true" dt:theme="bootstrap2"
+               class="table table-striped table-bordered table-condensed">
+               <thead>
+                  <tr>
+                     <th>Id</th>
+                     <th>Firstname</th>
+                     <th>Lastname</th>
+                     <th>Street</th>
+                     <th>Mail</th>
+                  </tr>
+               </thead>
+               <tbody>
+                  <tr th:each="person : ${persons}">
+                     <td th:text="${person.id}">1</td>
+                     <td th:text="${person.firstName}">John</td>
+                     <td th:text="${person.lastName}">Doe</td>
+                     <td th:text="${person.address.street1}">Nobody knows !</td>
+                     <td th:text="${person.mail}">john@doe.com</td>
+                  </tr>
+               </tbody>
+            </table>
          </div>
       </div>
-
-      <script>
-							$(document)
-									.ready(
-											function() {
-
-												$
-														.getGithubFileByFilePath(
-																"datatables4j",
-																"datatables4j-demo-thymeleaf",
-																"src/main/webapp/WEB-INF/views/themes/bootstrap2.html",
-																function(
-																		contents) {
-																	$('#code')
-																			.text(
-																					contents);
-																	prettyPrint();
-																}, 43, 62);
-
-												prettyPrint();
-											});
-						</script>
    </div>
 
 </body>
