Fixed plugins link in index

--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -65,7 +65,7 @@
             </h3>
             <p>Need to use a DataTables plugin ? See how easy it is !</p>
             <p>
-               <a class="btn" href="@{/plugins/home}">View details »</a>
+               <a class="btn" th:href="@{/plugins/home}">View details »</a>
             </p>
          </div>
       </div>
